# polycontacts

./: .gitignore  404.html  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  bootstrap.sh  export.sh  index.html  mkdocs.yml  pyproject.toml  run.sh  sitemap.xml  start.sh  status.sh
api/: main.py
api/static/: index.html
architektura/: index.html
chat_history/: 2026-05-10.md  2645acc7-277d-4ec6-adae-b707c4af9af7.jsonl  61e51b49-cf0d-4166-9512-5be4e21125fe.jsonl  autonomni_agenti.md  prompt_od_nuly.md
docs/: architektura.md  index.md  re-spec.md  technologie.md  vykon.md
docs/sluzby/: cpp.md  go.md  python.md  rust.md
re-spec/: index.html
search/: search_index.json
services/: docker-compose.yml
services/bff-python/: Dockerfile  pyproject.toml
services/bff-python/app/: main.py
services/bff-python/app/static/: index.html
services/bff-python/tests/: test_main.py
services/contacts-cpp/: CMakeLists.txt  Dockerfile
services/contacts-cpp/src/: main.cpp  test_contacts.cpp
services/gateway-go/: Dockerfile  main.go  main_test.go
services/search-rust/: Cargo.toml  Dockerfile
services/search-rust/src/: main.rs
sluzby/cpp/: index.html
sluzby/go/: index.html
sluzby/python/: index.html
sluzby/rust/: index.html
src/: contact_book.cpp  contact_book.hpp  main.cpp
technologie/: index.html
vykon/: index.html
